--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ crate-type = ["staticlib", "rlib"]
 travis-ci = { repository = "arvancloud/nginx-rs" }
 
 [build-dependencies]
-bindgen = "0.55"
+bindgen = "*"
